Fix issues related to a continuous event getting coalesced with a discrete event.

Touch move events that are non-cancelable are rAF aligned. But a touch
event can get coalesced with a cancelable one which can make a previously
rAF aligned event become a discrete event.

Ack non-cancelable rAF aligned events right away but allow merging of
non-ack required events with ack required events.

BUG=670039

Review-Url: https://codereview.chromium.org/2557153002
Cr-Commit-Position: refs/heads/master@{#437344}

Former-commit-id: 74b27c5f8ea554abe9e652ecc51530f9e580c147