content/renderer/input/render_widget_input_handler.cc
@@ -397,7 +397,8 @@ void RenderWidgetInputHandler::HandleInputEvent(
 
   TRACE_EVENT_SYNTHETIC_DELAY_END("blink.HandleInputEvent");
 
-  if (dispatch_type == DISPATCH_TYPE_BLOCKING_NOTIFY_MAIN) {
+  if (dispatch_type == DISPATCH_TYPE_BLOCKING_NOTIFY_MAIN ||
+      dispatch_type == DISPATCH_TYPE_NON_BLOCKING_NOTIFY_MAIN) {
     // |non_blocking| means it was ack'd already by the InputHandlerProxy
     // so let the delegate know the event has been handled.
     delegate_->NotifyInputEventHandled(input_event.type, ack_result);
